[devkit] IJPL-211577 Prohibit Support and Tools words in plugin names
Those suffixes to not add anything meaningful in names

GitOrigin-RevId: b6c95612703250f84f6f75c55b9bf3c6c3f3a51f